# PlatformerFromScratch

./: .gitattributes  .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake
config/: debug_dir.vcxproj.user.in
data/shader/: Unlit.frag  Unlit.vert
src/: NonCopyable.hpp  Texture.cpp  Texture.hpp  main.cpp
src/debug/: Debug.hpp
src/gl/: BufferObject.hpp  Shader.cpp  Shader.hpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VertexArray.hpp
